# python-project-50

./: .coverage  .gitignore  Makefile  README.md  pyproject.toml
.github/: main.yml
.github/workflows/: main.yml  my_test.yml  my_tests.yml  pyci.yml
gendiff/: __init__.py  gen_decorator.py  gen_file.py  gendiff.py  generate_file.py  get_decorator.py  parse_arguments.py
gendiff/formaters/: __init__.py  json.py  plain.py  stringify_dict.py  stylish.py
gendiff/programs/: gendiff.py
gendiff/scripts/: gendiff.py
gendiff/starters/: gendiff.py  gendiff_yaml.py  generate_diff.py
tests/: test_generate_diff.py
tests/fixtures/: get_right_result.py  json_right_result.json  right_result.json
