[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Второй учебный проект в курсе Хекслета. Вычисляет различия между двумя конфигурационными файлами."
authors = ["Parrot7325 <maximus1997@yahoo.com>"]
readme = "README.md"
packages = [
   {include = "gendiff"}]
classifiers = [
    "Programming Language :: Python :: 3 :: Only"
]

[tool.poetry.dependencies]
python = "^3.9"
pyyaml = "^6.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"
generate-diff = "gendiff.scripts.gendiff:main"
